[tool.poetry]
name = "aws_helpers"
version = "0.1.0"
description = "Simple helper scripts for AWS"
authors = ["denis <git@dpnet.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.29"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^23.9"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
